# live-whisper

./: .gitignore  CMakeLists.txt  LICENSE  README.org
cmake/: fix-namespace.cmake
src/: audio.cpp  audio.h  font.cpp  font.h  imgui_impl_wayland.cpp  imgui_impl_wayland.h  main.cpp  overlay.cpp  overlay.h  paste.cpp  paste.h  transcriber.cpp  transcriber.h
